(feat) Fix the spacing on the form, still not filling the whole width however

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -21,6 +21,12 @@ p, div {
   margin-bottom: 10%
 }
 
+textarea {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
 /*Blog Page Classes*/
 .blogPageContainer {
   margin-bottom: 10%
